fix: clipped information banner on small viewports (#2878)
* fix: clipped information banner on small viewports


* fix: remove unused css


* fix: remove empty lines

* fix: remove empty lines

* fix: remove empty lines

* fix: remove empty lines

* fix: show toc on mobile

* fix: toc order

* fix: wrong order

* Update sass/_docs.scss


* Update sass/_docs.scss


---------

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -56,7 +56,6 @@ body {
 
 main {
     flex: 1;
-    padding-top: var(--navbar-height);
 }
 
 a {
