--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,5 +1,6 @@
 .site-header {
-    position: fixed;
+    position: sticky;
+    top: 0;
     z-index: 1000;
     --header-padding: 1.5dvw;
     --header-vertical-padding: 8px;
